# neighborhood-library-service

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.husky/: pre-commit
config/: git-allowed-committers.example
db/init/: 00_extensions.sql  99_apply_migrations.sh
db/migrations/: 001_schema.sql  002_seed.sql  003_domain_checks.sql
docs/: architecture.md  schema.md
frontend/: Dockerfile  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: StatusBanner.tsx
frontend/lib/: api.ts  types.ts
frontend/tests/: health.test.ts
grpc_service/: Dockerfile  pyproject.toml
grpc_service/src/neighborhood_library_grpc/: __init__.py  __main__.py  domain_validation.py  lending_workflow.py  mongo_events.py  server.py
grpc_service/tests/: conftest.py  test_domain_validation.py  test_grpc_live_rpcs.py  test_library_servicer.py
postman/: Neighborhood-Library.local.postman_environment.json  Neighborhood-Library.postman_collection.json  gRPC-Protobuf-Postman.txt
rest_gateway/: Dockerfile  pyproject.toml
rest_gateway/src/neighborhood_library_gateway/: __init__.py  __main__.py  app.py  grpc_client.py  mongo_events.py  runtime_efficiency.py  schemas.py
rest_gateway/tests/: test_db_schema.py  test_health.py  test_proxy_routes.py  test_rest_live.py  test_rest_remaining_endpoints.py  test_runtime_efficiency.py  test_schemas_and_errors.py
scripts/: db-migrate.sh  gen_proto.sh  git-check-allowed-committer.sh  git-create-workflow-branches.sh  grpc_chatty_demo.py  rest_smoke.sh
(+5 files in other folders)
